[build-system]

[project]
name = "sit_fuse"
authors = [{name = "Nick", email = "nlahaye@jpl.nasa.gov"}]
dynamic = ["version", "description"]

dependencies = [
    "x-transformers @ git+https://github.com/lucidrains/x-transformers.git@main",
    "byol-pytorch @ git+https://github.com/lucidrains/byol-pytorch.git@master",
    "I-JEPA @ git+https://github.com/gaasher/I-JEPA.git@main",
    "learnergy @ git+https://github.com/nlahaye/learnergy.git@module_list_update"
]


